--- a/lapa/.codacy.yml
+++ b/lapa/.codacy.yml
@@ -24,6 +24,6 @@ exclude_paths:
   - '**/lapa/app/Console/**'
   - '**/lapa/app/Providers/**'
   - '**/lapa/database/**'
-  - '**.js'
+  - '**/lapa/resources/js/**'
   - '**.mix.js'
   - '**.md'
