/database/migrations/ adicionado ao .codacy.yml

--- a/.codacy.yml
+++ b/.codacy.yml
@@ -21,9 +21,9 @@ exclude_paths:
   - 'spec/**/*'
   - 'benchmarks/**/*'
   - '**.min.js'
-  - '**/lapa/app/Console/**'
-  - '**/lapa/app/Providers/**'
-  - '**/lapa/database/**'
-  - '**/lapa/resources/js/**'
+  - '**/app/Console/**'
+  - '**/app/Providers/**'
+  - '**/database/migrations/*'
+  - '**/resources/js/**'
   - '**.mix.js'
   - '**.md'
