--- a/codeception.yml
+++ b/codeception.yml
@@ -5,10 +5,8 @@ suites:
         path: .
         modules:
             enabled:
-                - WebDriver:
-                    url: http://127.0.0.1:8000
-                    browser: chrome
-                    port: '9515'
+                - PhpBrowser:
+                    url: http://localhost:8000
                 - \Helper\Acceptance
                 
         # add Codeception\Step\Retry trait to AcceptanceTester to enable retries
