--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,10 @@
         "fzaninotto/faker": "^1.9",
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.0",
+        "laravel/helpers": "^1.2",
         "laravel/tinker": "^2.0",
-        "laravel/ui": "^2.0"
+        "laravel/ui": "^2.0",
+        "spatie/laravel-feed": "^2.6"
     },
     "require-dev": {
         "codeception/module-laravel5": "^1.1",
