Configuração para o travis rodar o codeception

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ addons:
 
 install:
   - cp .env.example .env
+  - cp codeception.yml.travis codeception.yml
   - travis_retry composer install --no-interaction --prefer-dist --no-suggest
   - php artisan key:generate
 
