Configurado email no travis

--- a/.env.testing
+++ b/.env.testing
@@ -14,3 +14,12 @@ MAIL_DRIVER=array
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=array
 BUGSNAG_API_KEY=randkey
+
+MAIL_MAILER=smtp
+MAIL_HOST=smtp.mailtrap.io
+MAIL_PORT=2525
+MAIL_USERNAME=a3fc5d1010b292
+MAIL_PASSWORD=049c8574e33232
+MAIL_ENCRYPTION=TLS
+MAIL_FROM_ADDRESS=testing@gmail.com
+MAIL_FROM_NAME="${APP_NAME}"
