Testes de materiais corrigidos

--- a/codeception.yml
+++ b/codeception.yml
@@ -34,6 +34,8 @@ gherkin:
                 - VisitaSteps  
             disciplina:
                 - DisciplinaSteps
+            material:
+                - MaterialSteps
 
 # additional paths
 paths:
