Corrigidos 3 testes de atlas

--- a/codeception.yml
+++ b/codeception.yml
@@ -38,6 +38,8 @@ gherkin:
                 - MaterialSteps
             categoria:
                 - CategoriaSteps
+            atla:
+                - AtlaSteps
 
 # additional paths
 paths:
