Correção teste de atlas.

--- a/codeception.yml
+++ b/codeception.yml
@@ -36,6 +36,8 @@ gherkin:
                 - DisciplinaSteps
             categoria:
                 - CategoriaSteps
+            atla:
+                - AtlaSteps
 
 # additional paths
 paths:
