--- a/.env.testing
+++ b/.env.testing
@@ -21,5 +21,5 @@ MAIL_PORT=2525
 MAIL_USERNAME=a3fc5d1010b292
 MAIL_PASSWORD=049c8574e33232
 MAIL_ENCRYPTION=TLS
-MAIL_FROM_ADDRESS=testing@gmail.com
+MAIL_FROM_ADDRESS=lapa@gmail.com
 MAIL_FROM_NAME="${APP_NAME}"
