--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "cross-env": "^7.0",
     "jquery": "^3.2",
     "laravel-mix": "^5.0.1",
+    "less": "^3.11.1",
+    "less-loader": "^6.1.0",
     "lodash": "^4.17.13",
     "popper.js": "^1.12",
     "resolve-url-loader": "^2.3.1",
@@ -23,5 +25,9 @@
     "vue": "^2.5.17",
     "vue-template-compiler": "^2.6.10"
   },
-  "dependencies": {}
+  "dependencies": {
+    "underscore": "^1.10.2",
+    "moment": "^2.26.0",
+    "clndr": "^1.5.1"
+  }
 }
