--- a/package.json
+++ b/package.json
@@ -26,8 +26,12 @@
     "vue-template-compiler": "^2.6.10"
   },
   "dependencies": {
-    "underscore": "^1.10.2",
+    "bootstrap-datepicker": "^1.9.0",
+    "clndr": "^1.5.1",
+    "fibers": "^5.0.0",
+    "jquery-timepicker": "^1.3.3",
     "moment": "^2.26.0",
-    "clndr": "^1.5.1"
+    "node-sass": "^4.14.1",
+    "underscore": "^1.10.2"
   }
 }
