atualizando testes de usuários

--- a/.env.testing
+++ b/.env.testing
@@ -1,8 +1,8 @@
 APP_NAME=Laravel
 APP_ENV=testing
 APP_KEY=
+APP_URL=http://127.0.0.1:8000
 APP_DEBUG=true
-APP_URL=http://localhost/
 
 DB_CONNECTION=testing
 DB_TEST_USERNAME=root
@@ -23,3 +23,9 @@ MAIL_PASSWORD=rjsmehcelkgcxwes
 MAIL_ENCRYPTION=TLS
 MAIL_FROM_ADDRESS=lapaufape@gmail.com
 MAIL_FROM_NAME="${APP_NAME}"
+
+NOCAPTCHA_SECRET=6LeIxAcTAAAAAGG-vFI1TnRWxMZNFuojJ4WifJWe
+NOCAPTCHA_SITEKEY=6LeIxAcTAAAAAJcZVRqyHh71UMIEGNQ_MXjiZKhI
+
+
+
