--- a/composer.json
+++ b/composer.json
@@ -21,11 +21,15 @@
         "laravel/helpers": "^1.2",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.0",
-        "spatie/laravel-feed": "^2.6"
+        "spatie/laravel-feed": "^2.6",
+        "codeception/module-phpbrowser": "^1.0.0",
+        "codeception/module-db": "^1.0.0",
+        "codeception/module-laravel5": "^1.0.0"
     },
     "require-dev": {
         "codeception/module-db": "^1.0",
         "codeception/module-laravel5": "^1.1",
+        "codeception/module-lumen": "^1.0",
         "codeception/module-phpbrowser": "^1.0",
         "facade/ignition": "^2.0",
         "mockery/mockery": "^1.3.1",
