--- a/codeception.yml
+++ b/codeception.yml
@@ -7,11 +7,12 @@ suites:
             enabled:
                 - PhpBrowser:
                     url: http://localhost:8000
+                    host: 127.0.0.1
                 - \Helper\Acceptance
                 - Db:
                    dsn: 'mysql:host=localhost;dbname=laravel'
                    user: 'root'
-                   password: '12345678'
+                   password: ''
         # add Codeception\Step\Retry trait to AcceptanceTester to enable retries
         step_decorators:
             - Codeception\Step\ConditionalAssertion
@@ -47,7 +48,7 @@ paths:
     output: tests/_output
     data: tests/_data
     support: tests/_support
-    envs: tests/_envs
+    envs: .env.testing
 
 settings:
     shuffle: false
