Testes de Contato

--- a/codeception.yml
+++ b/codeception.yml
@@ -40,6 +40,8 @@ gherkin:
                 - CategoriaSteps
             atla:
                 - AtlaSteps
+            contato:
+                - ContatoSteps
 
 # additional paths
 paths:
