--- a/.env.testing
+++ b/.env.testing
@@ -16,12 +16,12 @@ SESSION_DRIVER=array
 BUGSNAG_API_KEY=randkey
 
 MAIL_MAILER=smtp
-MAIL_HOST=smtp.gmail.com
-MAIL_PORT=587
-MAIL_USERNAME=lapaufape@gmail.com
-MAIL_PASSWORD=rjsmehcelkgcxwes
-MAIL_ENCRYPTION=TLS
-MAIL_FROM_ADDRESS=lapaufape@gmail.com
+MAIL_HOST=smtp.mailtrap.io
+MAIL_PORT=2525
+MAIL_USERNAME=null
+MAIL_PASSWORD=null
+MAIL_ENCRYPTION=null
+MAIL_FROM_ADDRESS=null
 MAIL_FROM_NAME="${APP_NAME}"
 
 NOCAPTCHA_SECRET=6LeIxAcTAAAAAGG-vFI1TnRWxMZNFuojJ4WifJWe
