--- a/codeception.yml
+++ b/codeception.yml
@@ -10,7 +10,7 @@ suites:
                     host: 127.0.0.1
                 - \Helper\Acceptance
                 - Db:
-                   dsn: 'mysql:host=localhost;dbname=laravel'
+                   dsn: 'mysql:host=localhost;dbname=lapa'
                    user: 'root'
                    password: '12345678'
         # add Codeception\Step\Retry trait to AcceptanceTester to enable retries
