Corrigidos erros do codeception

--- a/codeception.yml
+++ b/codeception.yml
@@ -10,9 +10,9 @@ suites:
                     host: 127.0.0.1
                 - \Helper\Acceptance
                 - Db:
-                   dsn: 'mysql:host=localhost;dbname=lapa'
+                   dsn: 'mysql:host=localhost;dbname=laravel'
                    user: 'root'
-                   password: '33743637'
+                   password: '12345678'
         # add Codeception\Step\Retry trait to AcceptanceTester to enable retries
         step_decorators:
             - Codeception\Step\ConditionalAssertion
