Corrigidos testes para anexo de postagens serem link do drive ou da web

--- a/codeception.yml
+++ b/codeception.yml
@@ -43,6 +43,8 @@ gherkin:
                 - AtlaSteps
             contato:
                 - ContatoSteps
+            postagem:
+                - PostagemSteps
 
 # additional paths
 paths:
